added div stuff

--- a/index.html
+++ b/index.html
@@ -3,13 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>my webpage (its funny)</title>
+    <style media="screen">
+      div {
+        border: 1px solid black;
+        margin: 4px
+      }
+      #content {
+        background-color: #00ff91
+      }
+        #headerbox {
+        }
+
+      }
+    </style>
   </head>
   <body>
-<h1>my webpage (its funny)</h1>
+    <div id="content">
+      <div id="headerbox">
+        <h1>my webpage (its funny)</h1>
+      </div>
+        <div class="segment">
+          <img src="fombo.jpeg" alt="why isnt this working" width="500" height="300"> the devil
+          <img src="house.jpg" alt="why isnt this working" width="500" height="300"> this is a house probably
+        </div>
+<div class="segment">
+  <a href="game.html">play bad game I made</a>
+</div>
+
 <p>
-  as you can see
+  as you can see im very good at making websites
 </p>
-<h2>my game is get to school 3 (didnt know this was going to be this but ok?????)</h2>
-<a href="game.html">play bad game I made</a>
+<p>
+  cope harder
+</p>
 </body>
 </html>
