float and clear
clear didnt work because it STINKS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>my webpage (its funny)</title>
-    <style media="screen">
-      div {
-        border: 1px solid black;
-        margin: 4px
-      }
-      #content {
-        background-color: #00ff91
-      }
-        #headerbox {
-        }
+<html>
+ <head>
+   <title>my webpage</title>
+   <link rel="stylesheet" href="css/style.css">
+   </head>
+   <body>
+<div id="content">
+  <div id="headerBox">
+<h1>my webpage (its funny)</h1>
+  </div>
+  <img src="img/house.jpg" alt="why isnt this working" width="1000" height="1000">
+  <div class="segment">
+    <a href="game.html">play the game</a>
+    <img src="img/fombo.jpeg" alt="why isnt this working">
 
-      }
-    </style>
-  </head>
-  <body>
-    <div id="content">
-      <div id="headerbox">
-        <h1>my webpage (its funny)</h1>
-      </div>
-        <div class="segment">
-          <img src="fombo.jpeg" alt="why isnt this working" width="500" height="300"> the devil
-          <img src="house.jpg" alt="why isnt this working" width="500" height="300"> this is a house probably
-        </div>
-<div class="segment">
-  <a href="game.html">play bad game I made</a>
-</div>
-
-<p>
-  as you can see im very good at making websites
-</p>
-<p>
-  cope harder
-</p>
-</body>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam mattis, elit pretium pellentesque scelerisque, tortor ex semper eros, vitae accumsan quam neque vulputate magna. Praesent orci leo, blandit eget fermentum nec, porttitor sit amet libero. Vivamus molestie at dolor elementum malesuada. Nulla malesuada enim commodo, rutrum diam feugiat, convallis ipsum. Nullam ut posuere dolor. Nulla in bibendum orci. Aliquam aliquet, felis at ornare dignissim, mi diam accumsan elit, eget sollicitudin diam nisi eu lectus. Curabitur imperdiet semper leo, nec vehicula sapien hendrerit sed. Nulla nisi nulla, volutpat non justo at, ornare sodales ligula.</p>
+<img src="img/fombo.jpeg" alt="why isnt this working" class="centerimg">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam mattis, elit pretium pellentesque scelerisque, tortor ex semper eros, vitae accumsan quam neque vulputate magna. Praesent orci leo, blandit eget fermentum nec, porttitor sit amet libero. Vivamus molestie at dolor elementum malesuada. Nulla malesuada enim commodo, rutrum diam feugiat, convallis ipsum. Nullam ut posuere dolor. Nulla in bibendum orci. Aliquam aliquet, felis at ornare dignissim, mi diam accumsan elit, eget sollicitudin diam nisi eu lectus. Curabitur imperdiet semper leo, nec vehicula sapien hendrerit sed. Nulla nisi nulla, volutpat non justo at, ornare sodales ligula.</p>
+  </div>
+  </div>
+  </body>
 </html>
